objects/Opportunity_Plan__c.object
<CustomObject>
    <fields>
        <fullName>CR_CustEquip_Q2__c</fullName>
        <description>What is the customer going to do with the existing equipment when the new equipment is in place?</description>
        <label>CR Customer Equipment Mgmt</label>
        <picklist>
            <picklistValues>
                <fullName>Dispose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leverage HPFS Asset Recovery Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-deploy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CR_CustPay_Q1__c</fullName>
        <label>CR Customer Payment Model</label>
        <picklist>
            <picklistValues>
                <fullName>3rd party Lessor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financing through HPFS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CR_Last_Modified_By__c</fullName>
        <label>CR Last Modified By</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CR_last_modified__c</fullName>
        <label>CR_last_modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CR_last_updated_by__c</fullName>
        <label>CR last updated by</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Plan_Count__c</fullName>
        <description>field to Count of number of records on close plan records Steps to close</description>
        <label>Close Plan Count</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Combined_Buying_Potential__c</fullName>
        <formula>TEXT(CASE( OG_CBP_S__c , &quot;LL&quot;, 15, &quot;ML&quot;, 25,&quot;LM&quot;, 25, &quot;LH&quot;, 30,&quot;HL&quot;, 30, &quot;HM&quot;, 60,&quot;MH&quot;, 60, &quot;MM&quot;, 50, 80))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combined Buying Potential</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DG_Compelling_Event__c</fullName>
        <defaultValue>&quot;-&quot;</defaultValue>
        <label>DG Compelling Event</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DG_Money__c</fullName>
        <defaultValue>&quot;-&quot;</defaultValue>
        <label>DG_Money</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DG_People__c</fullName>
        <defaultValue>&quot;-&quot;</defaultValue>
        <label>DG_People</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DG_Time__c</fullName>
        <defaultValue>&quot;-&quot;</defaultValue>
        <label>DG_Time</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DHC_2_Buyer_experience_with_HP__c</fullName>
        <label>Buyer Experience with HP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_2_Client_Decision_Process__c</fullName>
        <label>Client Decision Process</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_2_Client_Relationship_and_Insight__c</fullName>
        <label>Client Relationship and Insight</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_2_Competitive_Position__c</fullName>
        <label>Competitive Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_2_Deal_Shape_and_Pricing__c</fullName>
        <label>Deal Shape and Pricing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_2_Delivery_Leadership_Team__c</fullName>
        <label>Delivery Leadership Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_2_Differentiation__c</fullName>
        <label>Differentiation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_2_Sales_Team_Staffing__c</fullName>
        <label>Sales Team Staffing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_2_Solution_Scope__c</fullName>
        <label>Solution Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_2_Teaming__c</fullName>
        <label>Teaming</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_2_Terms_and_Conditions__c</fullName>
        <label>Terms and Conditions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_2_Will_the_client_buy__c</fullName>
        <label>Will the client buy?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_Color_Buyer_Experience__c</fullName>
        <formula>IMAGE(  
CASE( LEFT( DHC_2_Buyer_experience_with_HP__c, 1),  
&quot;G&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;A&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;R&quot;, &quot;/img/samples/flag_red.gif&quot;,  
&quot;/s.gif&quot;),  
&quot;Deal Status&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Experience with HP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_Color_Client_Decision_Process__c</fullName>
        <formula>IMAGE( 
CASE( LEFT( DHC_2_Client_Decision_Process__c, 1), 
&quot;G&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;A&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;R&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Deal Status&quot;)</formula>
        <label>Client Decision Process</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_Color_Client_Relationship__c</fullName>
        <formula>IMAGE( 
CASE( LEFT( DHC_2_Client_Relationship_and_Insight__c, 1), 
&quot;G&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;A&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;R&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Deal Status&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Relationship and Insight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_Color_Competitive_Position__c</fullName>
        <formula>IMAGE( 
CASE( LEFT( DHC_2_Competitive_Position__c, 1), 
&quot;G&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;A&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;R&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Deal Status&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitive Position</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_Color_Delivery_Leadership_Team__c</fullName>
        <formula>IMAGE( 
CASE( LEFT( DHC_2_Delivery_Leadership_Team__c, 1), 
&quot;G&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;A&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;R&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Deal Status&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivery Leadership Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_Color_Differentiation__c</fullName>
        <formula>IMAGE( 
CASE( LEFT( DHC_2_Differentiation__c, 1), 
&quot;G&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;A&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;R&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Deal Status&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Differentiation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_Color_Shape_and_Pricing__c</fullName>
        <formula>IMAGE( 
CASE( LEFT( DHC_2_Deal_Shape_and_Pricing__c, 1), 
&quot;G&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;A&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;R&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Deal Status&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Shape and Pricing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_Color_Solution_Scope__c</fullName>
        <formula>IMAGE( 
CASE( LEFT( DHC_2_Solution_Scope__c, 1), 
&quot;G&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;A&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;R&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Deal Status&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solution Scope</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_Color_Team_Staffing__c</fullName>
        <formula>IMAGE( 
CASE( LEFT( DHC_2_Sales_Team_Staffing__c, 1), 
&quot;G&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;A&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;R&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Deal Status&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Staffing</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_Color_Teaming__c</fullName>
        <formula>IMAGE( 
CASE( LEFT( DHC_2_Teaming__c, 1), 
&quot;G&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;A&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;R&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Deal Status&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teaming</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_Color_Terms_and_Conditions__c</fullName>
        <formula>IMAGE( 
CASE( LEFT( DHC_2_Terms_and_Conditions__c, 1), 
&quot;G&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;A&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;R&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Deal Status&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Terms and Conditions</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_Color_WTB__c</fullName>
        <formula>IMAGE( 
CASE( LEFT( DHC_2_Will_the_client_buy__c , 1), 
&quot;G&quot;, &quot;/img/samples/flag_green.gif&quot;, 
&quot;A&quot;, &quot;/img/samples/flag_yellow.gif&quot;, 
&quot;R&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Deal Status&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Will They Buy?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_Comments_Buyer_Experience__c</fullName>
        <label>DHC_Comments_Buyer_Experience</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DHC_Comments_Client_Decision_Process__c</fullName>
        <label>DHC_Comments_Client_Decision_Process</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DHC_Comments_Client_Relationship__c</fullName>
        <label>DHC_Comments_Client_Relationship</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DHC_Comments_Competitive_Position__c</fullName>
        <label>DHC_Comments_Competitive_Position</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DHC_Comments_Deal_Shape_and_Pricing__c</fullName>
        <label>DHC_Comments_Deal_Shape_and_Pricing</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DHC_Comments_Delivery_Leadership_Team__c</fullName>
        <label>DHC_Comments_Delivery_Leadership_Team</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DHC_Comments_Differentiation__c</fullName>
        <label>DHC_Comments_Differentiation</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DHC_Comments_Sales_Team_Staffing__c</fullName>
        <label>DHC_Comments_Sales_Team_Staffing</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DHC_Comments_Solution_Scope__c</fullName>
        <label>DHC_Comments_Solution_Scope</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DHC_Comments_Teaming__c</fullName>
        <label>DHC_Comments_Teaming</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DHC_Comments_Terms_and_Conditions__c</fullName>
        <label>DHC_Comments_Terms_and_Conditions</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DHC_Comments_WTB__c</fullName>
        <label>DHC_Comments_WTB</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DHC_Last_Updated_Lagacy_No__c</fullName>
        <label>DHC Last Updated Lagacy No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_Sales_Stage_Warning__c</fullName>
        <formula>CASE( Sales_Stage__c, &quot;Stage 1&amp;2-Understand/Validate&quot;, IF( AND(LEFT(Opp_Sales_Stage__c,2)&lt;&gt;&apos;01&apos;,LEFT(Opp_Sales_Stage__c,2)&lt;&gt;&apos;02&apos; ) , &quot;Warning: Opportunity Sales Stage is different from the Assessment Sales Stage&quot;,&quot;&quot;), 
&quot;Stage 3-Qualify&quot;, IF( LEFT(Opp_Sales_Stage__c,2)&lt;&gt;&apos;03&apos;,&quot;Warning: Opportunity Sales Stage is different from the Assessment Sales Stage&quot;,&quot;&quot;), 
&quot;Stage 4 a&amp;b-Develop/Propose Solution&quot;, IF( LEFT(Opp_Sales_Stage__c,2)&lt;&gt;&apos;04&apos;,&quot;Warning: Opportunity Sales Stage is different from the Assessment Sales Stage&quot;,&quot;&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Stage Warning</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DHC_last_modified__c</fullName>
        <label>DHC_last_modified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DHC_last_updated__c</fullName>
        <label>DHC_last_updated</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>ClosePlan Additional Details</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Down_Select__c</fullName>
        <label>DoNotUse - Down Select</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Economic_Value__c</fullName>
        <label>DoNotUse - Economic Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>How_will_the_Exec_Sponsor_Support_You__c</fullName>
        <label>How will the Exec/Sponsor Support You</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OG_CBP_Number__c</fullName>
        <formula>VALUE( Combined_Buying_Potential__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CBP_Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OG_CBP_S__c</fullName>
        <label>CBP Stored</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OG_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>OG_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OG_Last_Modified_By__c</fullName>
        <label>OG Last Modified By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OG_Last_Modified_Date__c</fullName>
        <label>OG Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OG_WTBO_Q1__c</fullName>
        <inlineHelpText>Confirmed with Client: • Has client stakeholder articulated and verified clear prioritized business issues/opportunities with quantifiable evidence? • Can the client articulate specific monetary gain or loss associated with the issues/opportunities?</inlineHelpText>
        <label>1. Our Technical Solution Relative to Co</label>
        <picklist>
            <picklistValues>
                <fullName>0 - Don&apos;t Know/Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Clear Disadvantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Small Disadvantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Parity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Small Advantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Clear Advantage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OG_WTBO_Q2__c</fullName>
        <inlineHelpText>Confirmed with Client: • Are there reasonable attitudes and commitments regarding division of labor? • Do HP and the client share thinking about the range of investment required to achieve the results? • Does the client have adequate funding and resour</inlineHelpText>
        <label>2. Adequate Time, Human &amp; Financial Reso</label>
        <picklist>
            <picklistValues>
                <fullName>0 - Don&apos;t Know/Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Clear Disadvantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Small Disadvantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Parity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Small Advantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Clear Advantage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OG_WTBO_Q3__c</fullName>
        <inlineHelpText>Confirmed with Client: • Does the client have clarity on their decision making process? • Have we mapped the complete Steps, Decisions, When, Who, and Criteria? • Are the Decision Process and Criteria reasonable? 
(Decision Grid)</inlineHelpText>
        <label>3. Client has a Defined Decision Making</label>
        <picklist>
            <picklistValues>
                <fullName>0 - Don&apos;t Know/Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Clear Disadvantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Small Disadvantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Parity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Small Advantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Clear Advantage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OG_WTB_Q1__c</fullName>
        <label>1. A Strong Business Case Exists.</label>
        <picklist>
            <picklistValues>
                <fullName>0 - Don&apos;t Know/Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Strongly Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Neither Agree Nor Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Strongly Agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OG_WTB_Q2__c</fullName>
        <inlineHelpText>Confirmed with Client: • Are there reasonable attitudes and commitments regarding division of labor? • Do HP and the client share thinking about the range of investment required to achieve the results? • Does the client have adequate funding and resource</inlineHelpText>
        <label>2. Adequate Time, Human &amp; Financial Reso</label>
        <picklist>
            <picklistValues>
                <fullName>0 - Don&apos;t Know/Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Strongly Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Neither Agree Nor Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Strongly Agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OG_WTB_Q3__c</fullName>
        <inlineHelpText>Confirmed with Client: • Does the client have clarity on their decision making process? • Have we mapped the complete Steps, Decisions, When, Who, and Criteria? • Are the Decision Process and Criteria reasonable? 
(Decision Grid)</inlineHelpText>
        <label>3. Client has a Defined Decision Making</label>
        <picklist>
            <picklistValues>
                <fullName>0 - Don&apos;t Know/Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - Strongly Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Neither Agree Nor Disagree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Agree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Strongly Agree</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OP_Last_Modified__c</fullName>
        <label>OP_Last_Modified</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Close_Date__c</fullName>
        <formula>Opportunity__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opp_Sales_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>Opportunity__r.Opportunity_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <description>To Get Opportunity name for DHCExtract</description>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Plans</relationshipLabel>
        <relationshipName>Opportunity_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>Opportunity__r.Owner__r.Last_First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price2Win__c</fullName>
        <label>DoNotUse - Price2Win</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposal_Due_Date__c</fullName>
        <label>DoNotUse - Proposal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFI_Date__c</fullName>
        <label>DoNotUse - RFI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Date__c</fullName>
        <label>DoNotUse - RFP Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reasons_For_Not_Closing__c</fullName>
        <label>Reasons For Not Closing</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Record_Open_Date__c</fullName>
        <label>DoNotUse - Record Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Stage__c</fullName>
        <label>Sales Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Stage 1&amp;2-Understand/Validate</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 3-Qualify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stage 4 a&amp;b-Develop/Propose Solution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Opportunity_Value__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Opportunity Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Turn_Days__c</fullName>
        <label>DoNotUse - Turn Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_BG__c</fullName>
        <formula>text($User.Business_Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User BG</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_01_clients_most_important_problems__c</fullName>
        <description>What are or could be the client’s most important problems to solve and/or results to achieve? (Business Issues/Initiatives)</description>
        <inlineHelpText>What are or could be the client’s most important problems to solve and/or results to achieve? (Business Issues/Initiatives)</inlineHelpText>
        <label>VP_01_clients_most_important_problems</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VP_02_how_do_they_show_up__c</fullName>
        <description>How do or would they show up in the organization? (Evidence)</description>
        <inlineHelpText>How do or would they show up in the organization? (Evidence)</inlineHelpText>
        <label>VP_02_how_do_they_show_up</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VP_03_effects_of_issues__c</fullName>
        <description>What is or could be the effect of these issues? (Impact in $$$ or on a scale of 1-10)</description>
        <inlineHelpText>What is or could be the effect of these issues? (Impact in $$$ or on a scale of 1-10)</inlineHelpText>
        <label>VP_03_effects_of_issues</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VP_04_who_is_affected__c</fullName>
        <description>Who is or could be affected? How does this align with the strategy of the organization or individual? (Context)</description>
        <inlineHelpText>Who is or could be affected? How does this align with the strategy of the organization or individual? (Context)</inlineHelpText>
        <label>VP_04_who_is_affected</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VP_05_constraints__c</fullName>
        <description>What constraints do or may exist that would prevent the customer from addressing the problem or achieving the result? (Constraints)</description>
        <inlineHelpText>What constraints do or may exist that would prevent the customer from addressing the problem or achieving the result? (Constraints)</inlineHelpText>
        <label>VP_05_constraints</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VP_06_alternatives__c</fullName>
        <description>What alternatives does or might the customer have to address these issues/initiatives? (Options in addition to HP’s solutions: e.g., HP’s competitors, internal options, do nothing, etc.)</description>
        <inlineHelpText>What alternatives does or might the customer have to address these issues/initiatives? (Options in addition to HP’s solutions: e.g., HP’s competitors, internal options, do nothing, etc.)</inlineHelpText>
        <label>VP_06_alternatives</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VP_07_what_are_we_offering__c</fullName>
        <description>What are we offering to address this situation? (HP’s solution) What are the reasons adopting your solution makes sense?</description>
        <inlineHelpText>What are we offering to address this situation? (HP’s solution) What are the reasons adopting your solution makes sense?</inlineHelpText>
        <label>VP_07_what_are_we_offering</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VP_08_what_will_it_take__c</fullName>
        <description>What will it or could it take to implement our solution? (Resources – Time, People and Money)</description>
        <inlineHelpText>What will it or could it take to implement our solution? (Resources – Time, People and Money)</inlineHelpText>
        <label>VP_08_what_will_it_take</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VP_09_criteria__c</fullName>
        <description>What criteria would a solution like this need to meet? (Highest level decision criteria)</description>
        <inlineHelpText>What criteria would a solution like this need to meet? (Highest level decision criteria)</inlineHelpText>
        <label>VP_09_criteria</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VP_Last_Modified_Date__c</fullName>
        <label>VP Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VP_last_modified__c</fullName>
        <description>VP_last_modified</description>
        <inlineHelpText>VP_last_modified</inlineHelpText>
        <label>VP_last_modified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VP_last_updated_by__c</fullName>
        <label>VP_last_updated_by</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VP_value_proposition__c</fullName>
        <label>VP_value_proposition</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WTBO_Advantage__c</fullName>
        <label>Will They Buy Ours? Advantage</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WTBO_CBP__c</fullName>
        <formula>IF(AND(WTBO_Advantage__c=&quot;Disadvan&quot;, WTBO_Total__c &gt;=15),&quot;MEDIUM&quot;,IF(WTBO_Total__c&gt;=15,&quot;HIGH&quot;,IF(WTBO_Total__c&gt;=10,&quot;MEDIUM&quot;,&quot;LOW&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Will They Buy Ours ? CBP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WTBO_Total__c</fullName>
        <formula>VALUE(LEFT( TEXT(OG_WTBO_Q1__c) ,1))+ VALUE(LEFT( TEXT(OG_WTBO_Q2__c) ,1)) + VALUE(LEFT( TEXT(OG_WTBO_Q3__c) ,1))+ VALUE(LEFT( TEXT(OG_WTBO_Q4__c) ,1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Will They Buy Ours Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WTB_Agree__c</fullName>
        <label>Will They Buy? Agree</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WTB_CBP__c</fullName>
        <formula>IF( 
AND 
(WTB_Agree__c=&quot;Disagree&quot;, 
WTB_Total__c &gt;=19) 
,&quot;MEDIUM&quot;,IF(WTB_Total__c&gt;=19,&quot;HIGH&quot;,IF(WTB_Total__c&gt;=12,&quot;MEDIUM&quot;,&quot;LOW&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Will They Buy? CBP</label>
        <type>Text</type>
    </fields>
</CustomObject>